kubernetes/ingress/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/websocket-service: "service-server"
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST
  namespace: squidgame
spec:
  rules:
  - host: squidgame.35.184.172.30.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-website
            port:
              number: 3000
  - host: 35.184.172.30.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: error-injector
            port:
              number: 4000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-injector
  namespace: squidgame
  labels:
    app: error-injector
spec:
  selector:
    matchLabels:
      app: error-injector
  replicas: 1
  template:
    metadata:
      labels:
        app: error-injector
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: error-injector
---
apiVersion: v1
kind: Service
metadata:
  name: error-injector
  namespace: squidgame
spec:
  ports:
  - name: service
    port: 4000
  selector:
    app: error-injector
